--- a/Spielesammlung/Spielesammlung/Flappy_Bird/Flappy_Bird.resx
+++ b/Spielesammlung/Spielesammlung/Flappy_Bird/Flappy_Bird.resx
@@ -117,4 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="labelHelp.Text" xml:space="preserve">
+    <value>Mit jeder betätigung der Leertaste steigt der Vogel eine gewisse höhe.
+Das Ziel ist den Vogel an sovielen Hindernissen vorbeizuführen.
+Das spiel wird beendet wenn man gegen ein Hinderniss oder gegen den
+Boden fliegt.</value>
+  </data>
 </root>
