--- a/Spielesammlung/Spielesammlung/Vanguards/Vanguards.resx
+++ b/Spielesammlung/Spielesammlung/Vanguards/Vanguards.resx
@@ -123,4 +123,14 @@
   <metadata name="contextMenuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>172, 17</value>
   </metadata>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>389, 17</value>
+  </metadata>
+  <data name="labelHelp.Text" xml:space="preserve">
+    <value>Mit W,A,S,D oder mit den Pfeiltasten bewegen sie ihr Schiff im Raum.
+Mit der Leertaste Feuern sie ihre Waffen ab.
+Ihr ziel ist es so lange wie möglich zu überleben dabei so viele Feinde zu 
+Erledigen wie es geht.
+</value>
+  </data>
 </root>
