--- a/Spielesammlung/Spielesammlung/Vanguards/Vanguards.resx
+++ b/Spielesammlung/Spielesammlung/Vanguards/Vanguards.resx
@@ -133,4 +133,7 @@ Ihr ziel ist es so lange wie möglich zu überleben dabei so viele Feinde zu
 Erledigen wie es geht.
 </value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
