--- a/Spielesammlung/Spielesammlung/Properties/Resources.resx
+++ b/Spielesammlung/Spielesammlung/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Snake_grass-background" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Snake_grass-background1.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AxolotlCollection" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AxolotlCollection.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
